--- a/changelog
+++ b/changelog
@@ -4,6 +4,13 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.2] - 2022-03-21
+### Added
+- Program can set modbus register from UI.
+### Changed
+
+### Removed
+
 ## [0.1] - 2022-03-03
 ### Added
 - Possibility of reading and displaying modbus registers.
