--- a/changelog
+++ b/changelog
@@ -4,6 +4,13 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.4] - 2022-03-25
+### Added
+- Add error handing for problems with connection and writing registers.
+### Changed
+
+### Removed
+
 ## [0.3] - 2022-03-24
 ### Added
 
